[package]
name = "snake_01"
version = "0.1.0"
authors = ["Sea6 <srideep007sgmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
rand_distr = "0.2.2"
piston = "0.49.0"
pistoncore-glutin_window = "0.63.0"
piston2d-graphics = "0.36.0"
piston2d-opengl_graphics = "0.72.0"
rayon = "1.3.0"
