[package]
name = "snake_01"
version = "0.1.0"
authors = ["Sea6 <srideep007sgmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
rand_distr = "0.2.2"
piston = "0.49.0"
piston_window = "0.130.0"
find_folder = "0.3.0"
piston-ai_behavior = "0.33.0"
piston2d-sprite = "0.68.0"
image = "0.24.1"
piston2d-drag_controller = "0.30.0"
piston2d-deform_grid = "0.14.0"
piston2d-gfx_graphics = "0.80.0"
gfx = "0.18.1"
gfx_device_gl = "0.16.2"
vecmath = "1.0.0"
camera_controllers = "0.34.0"
shader_version = "0.7.0"

rayon = "1.3.0"
itertools = "0.9.0"
